--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @import "./assets/css/cheatsheets.css";
+@import "./assets/css/markdown-editor.css";
 
 body {
   margin: 0;
